input styling inserted, attempting to find minimum required input regex for js

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="content-wrapper">
         <form action="" method="get">
         <div class="zip-code-entry">
-            <button type="submit">
-            <input type="number" id="zip" name="zip" placeholder="Zip-Code" required
+            <button type="button">
+            <input type="number" id="zip" name="zip" placeholder="Zip-Code"
             onkeyup="myZipCode();">
             <p id="zipcode-alert">&nbsp;</p>
             </button>
