app layout traced

--- a/index.html
+++ b/index.html
@@ -20,9 +20,38 @@
         </div>
         </form>
         <div class="location">Location Dropdown as you type</div>
-        <div class="weather-wrapper">
-            <div class="temperature">(Temp)</div>
-            <div class="weather">Weather, State</div>
+    <div class="weather-wrapper">
+        <div class="temperature">(Temp)</div>
+        <div class="weather">Weather, State</div>
+    </div>
+    <div class="weather-grid">
+        <div class="item">Date
+            <div class="item-favicon">Fav
+                <div class="item-temp">Temp
+                    <div class="item-weather">
+                        Weather
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">Date
+            <div class="item-favicon">Fav
+                <div class="item-temp">Temp
+                    <div class="item-weather">
+                        Weather
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">Date
+            <div class="item-favicon">Fav
+                <div class="item-temp">Temp
+                    <div class="item-weather">
+                        Weather
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     </div>
     <script src="script.js"></script>
