zip-code validation fix in process

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="zip-code-entry">
             <button type="button" id="button" disabled>
             <input type="text" id="zip" name="zip" placeholder="Zip-Code"
-            onkeyup="myZipCode();" pattern="[0-9]*" maxlength="5" required>
+            onkeyup="myZipCode();" pattern="[0-9]*" minlength="5" maxlength="5" required>
             <p id="zipcode-alert">&nbsp;</p>
             </button>
         </div>
