js updated, added weather api script and functions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="background">
     <div class="content-wrapper">
-        <form action="" method="post">
+        <form action="" method="post" id="info">
         <div class="zip-code-entry">
             <button type="button" id="button" disabled>
             <input type="text" id="zip" name="zip" placeholder="Zip-Code"
@@ -21,7 +21,7 @@
         </form>
         <div class="location">Location Dropdown as you type</div>
     <div class="weather-wrapper">
-        <div class="temperature">(Temp)</div>
+        <div class="temperature">&deg;</div>
         <div class="weather">Weather, State</div>
     </div>
     <div class="weather-grid">
