--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="page-wrapper">
     <div id="background">
     <div class="content-wrapper">
         <form action="" method="get" id="info">
@@ -24,34 +25,27 @@
         <div id="state">City, State</div>
     </div>
     <div class="weather-grid">
-        <div class="item">Date
-            <div class="item-favicon">Fav
-                <div class="item-temp">Temp
-                    <div class="item-weather">
-                        Weather
-                    </div>
-                </div>
-            </div>
+        <div class="item">
+            Date:
         </div>
-        <div class="item">Date
-            <div class="item-favicon">Fav
-                <div class="item-temp">Temp
-                    <div class="item-weather">
-                        Weather
-                    </div>
-                </div>
-            </div>
+        <div class="item">
+            Date:
         </div>
-        <div class="item">Date
-            <div class="item-favicon">Fav
-                <div class="item-temp">Temp
-                    <div class="item-weather">
-                        Weather
-                    </div>
-                </div>
-            </div>
+        <div class="item">
+            Date:
+        </div>
+        <div class="item">
+            Date:
         </div>
     </div>
+    </div>
+    </div>
+    <div class="flipswitch">
+        <input type="checkbox" checked="" id="fs" class="flipswitch-cb" name="flipswitch">
+        <label for="fs" class="flipswitch-label">
+            <div class="flipswitch-inner"></div>
+            <div class="flipswitch-switch"></div>
+        </label>
     </div>
     <script src="script.js"></script>
 </body>
