added more stats js

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     </div>
     <div class="weather-grid">
         <div class="item">
-            Date:
+            <strong>Humidity</strong>:<span id="humidity"></span>
         </div>
         <div class="item">
-            Date:
+            <strong>Wind Dir</strong>:<span id="wind-dr"></span>
         </div>
         <div class="item">
-            Date:
+            <strong>Wind(mph)</strong>:<span id="wind-mph"></span>
         </div>
         <div class="item">
-            Date:
+            <strong>Precip(in.)</strong>:<span id="precip"></span>
         </div>
     </div>
     </div>
