--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="page-wrapper">
     <div id="background">
     <div class="content-wrapper">
+        <div class="phone">
+            <div class="wifi"><i class="tiny material-icons">network_wifi</i></div>
+            <div class="battery"><span class="tiny material-icons">battery_6_bar</span></div>
+            <div class="time">7:10</div>
+        </div>
         <form action="" method="get" id="info">
         <div class="zip-code-entry">
             <input type="text" id="zip" name="zip" placeholder="Zip-Code"
