--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0;user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
@@ -17,10 +17,9 @@
             <div class="battery"><span class="tiny material-icons">battery_6_bar</span></div>
             <div class="time">7:10</div>
         </div>
-        <form action="" method="get" id="info">
+        <form action="" onsubmit="dispWeather(event)" method="get" id="info">
         <div class="zip-code-entry">
-            <input type="text" id="zip" name="zip" placeholder="Zip-Code"
-            onkeypress="myZipCode();" onkeydown="" pattern="[0-9]*" maxlength="5" required>
+            <input type="text" id="zip" name="zip" placeholder="City/Zip" required>
             <p id="zipcode-alert"></p>
         </div>
         </form>
