removed unecessary icons and photos post debug

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0;user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -25,6 +28,7 @@
         </form>
     <div class="weather-wrapper">
         <div id="temperature"></div>
+        <div id="celsius">cels</div>
         <div id="icon">icon</div>
         <div id="weather">Weather</div>
         <div id="state">City, State</div>
@@ -44,13 +48,6 @@
         </div>
     </div>
     </div>
-    </div>
-    <div class="flipswitch">
-        <input type="checkbox" checked="" id="fs" class="flipswitch-cb" name="flipswitch">
-        <label for="fs" class="flipswitch-label">
-            <div class="flipswitch-inner"></div>
-            <div class="flipswitch-switch"></div>
-        </label>
     </div>
     <script src="script.js"></script>
 </body>
