--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     </div>
     <div class="weather-grid">
         <div class="item">
+            <strong>Feels Like</strong>:<span id="feelslike"></span>
+        </div>
+        <div class="item">
             <strong>Humidity</strong>:<span id="humidity"></span>
+        </div>
+        <div class="item">
+            <strong>Pressure</strong>:<span id="pressure"></span>
         </div>
         <div class="item">
             <strong>Wind Dir</strong>:<span id="wind-dr"></span>
