--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body onload = "defaultWeather()">
     <div class="page-wrapper">
     <div id="background">
     <div class="content-wrapper">
@@ -55,6 +55,7 @@
     </div>
     </div>
     </div>
+    <script src="default.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
